==2013-09-28==
* More detailed logging, per connection. Unfortunately, no session tracking, yet.
* Better labels for SSB dataset

==2013-09-27==
* TODO: 
** Better understanding for users. Unfortunately, currently there is a JavaScript error in LDCX.
** Even more robustness? 
*** Currently, if I cannot store any more in the triple store, I just throw an error. After reload, a new triple store should be filled?
*** If a query is too big, java script LDCX currently does not complain, can be improved?
*** According to Günter und Daniel, asking for the amount of free memory is not a best practice. 
Instead 1) I should properly test the system and see whether there are errors 2) I should put user
restrictions on the system, e.g., you cannot analyze datasets with such and such amount of triples.
**** Added triple count check and magic number 100,000 triples max.

** LDCX pivot visualisation often wrong (first column, if we use several dimensions on rows?)

==2013-09-26==
* Why does Edgar example dataset does not fulfill constraint 12? [http://www.w3.org/2011/gld/validator/qb/qb-test?upload=upload-2013-09-25T20-51-51-104] 
** This is in more detail described here: http://linked-data-cubes.org/index.php/Displaying_of_background_information_useful_for_interpretation
** Edgar would need to be improved

* Robustness
** The system is still not very robust, since queries may ask for too many columns and rows to be visualized (in JavaScript on client? Or to populate result set on server?). 
*** One solution might be JSON as described here: http://www.blogger.com/comment.g?blogID=5672165237896126100&postID=9002652898272515547
*** Another solution would be to properly implement NON EMPTY COLUMNS and NON EMPTY ROWS and to set this up as default in the system. This way, no impossible queries for a non too big file should be possible.
*** Question: Does olap4ld cope with a big query?

* For robustness: Properly implement NON EMPTY CLAUSE: